# shinyboard

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  README.md  db2kpi.sh  pyvenv.cfg  run_db_to_kpi.sh
db-to-kpi/: .env_sample  app.py  config.toml  connect.py  main.py  pyproject.toml  required_package_utils.py  tox.ini
db-to-kpi/appdata/: __init__.py  stored_query_model.py  stored_query_repository.py
db-to-kpi/i18n/: base.po
db-to-kpi/pages/: sales_page.py  shared.py
db-to-kpi/styles/: app.css
db-to-kpi/utils/: Colors.py  Logger.py  colors.py  logger.py
db2kpi/: pyproject.toml
db2kpi/src/: app.py
db2kpi/src/db2kpi/: config.py  db_connect.py  element.py  loader.py  main.py  odoo-like-db.toml  odoo.py
db2kpi/src/db2kpi/app/: app.py  odoo.py
db2kpi/src/db2kpi/data/: config.toml  odoo-like-db.toml
db2kpi/src/db2kpi/style/: app.css
enterprise-dashboard/: app.py  chat.py  config.toml  connect.py  required_package_installer.py  required_package_utils.py  requirements.txt  shared.py  sql_query_input.py  stored_queries_page.py  test_cx.py
enterprise-dashboard/appdata/: simple_repository.py  stored_query_model.py  stored_query_repository.py
enterprise-dashboard/models/: GeneratedDataModel.py  stored_query_model.py
first-dashboard/: .env-demo  app.css  app.py  auth.py  connect.py  general_stats.py  interactive_stats.py  requirements.txt  shared.py  styles.css
odoo_demo/: __manifest__.py
parquets/: hr_employee_named_skill  hr_employee_skill  hr_skill
shiny-custom/: .gitignore  README.md  pyproject.toml
(+70 files in other folders)
