[project]
name = "db2kpi"
version = "0.2.0"
description = "Extract data from database to create KPI dashboards"
readme = "README.md"
authors = [
    { name = "David BEAL", email = "david.beal@akretion.com" },
]
requires-python = ">=3.13"
dependencies = [
    "faicons",
    # "great_tables",
    # "peewee",
    "plotly",
    "polars",
    "psycopg",
    "seaborn",
    "shiny",
    "shinywidgets",
    "pyarrow",
    "connectorx",
    # "sqlglot",
    "pg-autojoin",
]
[project.optional-dependencies]
test = [
    "pytest",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pg-autojoin = { git = "https://github.com/bealdav/pg-autojoin.git", rev = "main" }
